# multiclass_multilabel_multihead_text_classification

./: marked_data.tsv  markup.txt  pro_hw1_solved_YOUR_NAME_HERE.ipynb  pyproject.toml  x_test.csv  x_train.csv  y_test.csv  y_train.csv
.ipynb_checkpoints/: pro_hw1_solved_Molchanova-checkpoint.ipynb  pro_hw1_solved_YOUR_NAME_HERE-checkpoint.ipynb
