[tool.poetry]
name = "deepschool llm pro"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
jupyter = "^1.1.1"
notebook = "^7.5.0"
pandas = "^2.3.3"
transformers = "^4.57.1"
bitsandbytes = "^0.48.2"
accelerate = "^1.12.0"
hf-xet = "^1.2.0"
torch = {version = "^2.9.1+cu130", source = "torch_cuda"}
torchvision = {version = "^0.24.1+cu130", source = "torch_cuda"}
iterative-stratification = "^0.1.9"

[[tool.poetry.source]]
name = "torch_cuda"
url = "https://download.pytorch.org/whl/cu130"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
